[package]
name = "vsts"
version = "0.6.0"
authors = ["Miguel A. Alvarado V."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers"] }
tower-http = { version = "0.3.0", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "7"
serde = {version = "1", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
config = "0.10"
lazy_static = "1.4"