[package]
name = "vsts"
version = "0.13.0"
authors = ["Miguel A. Alvarado V."]
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["headers"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "7"
serde = {version = "1", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
config = "0.13"
lazy_static = "1.4"
duration-str = "0.3"